--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QE'
 - !lcsh 'Geology'
+- GITenberg
 tableOfContents: 'Of the materials which compose the crust of the earth: Elementary
   substances. Simple minerals. The mineral masses which form the crust of the earth
   -- Of the arrangement of the materials which compose the crust of the earth: The
